--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ smallvec = "1.4.0"
 structopt = { version = "0.3.14", default-features = false }
 tempfile = "3.1.0"
 
+# best proximity
+pathfinding = "2.0.4"
+
 # to implement internally
 itertools = "0.9.0"
 
