--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ memmap = "0.7.0"
 once_cell = "1.4.0"
 oxidized-mtbl = { git = "https://github.com/Kerollmops/oxidized-mtbl.git", rev = "9451be8" }
 rayon = "1.3.0"
-roaring = "0.5.2"
+roaring = { git = "https://github.com/Kerollmops/roaring-rs.git", branch = "deserialize-from-slice" }
 slice-group-by = "0.2.6"
 smallstr = "0.2.0"
 smallvec = "1.4.0"
@@ -39,4 +39,7 @@ tokio = { version = "0.2.15", features = ["full"] }
 warp = "0.2.2"
 
 [profile.release]
+debug = true
+
+[profile.bench]
 debug = true
