Add a feature flags to enable the export of stats

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,10 @@ warp = "0.2.2"
 [dev-dependencies]
 criterion = "0.3"
 
+[features]
+default = []
+intersect-to-csv = []
+
 [[bench]]
 name = "search"
 harness = false
