--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
 linked-hash-map = "0.5.3"
 memmap = "0.7.0"
 once_cell = "1.4.0"
+rayon = "1.3.1"
 roaring = { git = "https://github.com/Kerollmops/roaring-rs.git", branch = "deserialize-from-slice" }
 slice-group-by = "0.2.6"
 smallstr = "0.2.0"
