--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ fxhash = "0.2.1"
 heed = { version = "0.8.1", default-features = false, features = ["lmdb"] }
 jemallocator = "0.3.2"
 levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
-linked-hash-map = "0.5.3"
 memmap = "0.7.0"
 once_cell = "1.4.0"
+oxidized-mtbl = { git = "https://github.com/Kerollmops/oxidized-mtbl.git", rev = "9451be8" }
 rayon = "1.3.1"
 roaring = { git = "https://github.com/Kerollmops/roaring-rs.git", branch = "deserialize-from-slice" }
 slice-group-by = "0.2.6"
