--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ indexmap = "1.4.0"
 itertools = "0.9.0"
 
 # http server
+askama = "0.10.1"
+askama_warp = "0.10.0"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "0.2.15", features = ["full"] }
 warp = "0.2.2"
