--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ smallvec = "1.4.0"
 structopt = { version = "0.3.14", default-features = false }
 tempfile = "3.1.0"
 
+# to highlight the documents
+regex = "1.3.9"
+
 # logging
 log = "0.4.8"
 stderrlog = "0.4.3"
