--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ default-run = "indexer"
 [dependencies]
 anyhow = "1.0.28"
 arc-cache = { git = "https://github.com/Kerollmops/rust-arc-cache.git", rev = "56530f2" }
+astar-iter = { git = "https://github.com/Kerollmops/astar-iter" }
 bitpacking = "0.8.2"
 byteorder = "1.3.4"
 cow-utils = "0.1.2"
@@ -34,7 +35,7 @@ log = "0.4.8"
 stderrlog = "0.4.3"
 
 # best proximity
-indexmap = "1.4.0"
+indexmap = "1.5.1"
 
 # to implement internally
 itertools = "0.9.0"
