--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ bstr = "0.2.13"
 byteorder = "1.3.4"
 cow-utils = "0.1.2"
 csv = "1.1.3"
+flate2 = "1.0.17"
 fst = "0.4.3"
 fxhash = "0.2.1"
 heed = { version = "0.8.1", default-features = false, features = ["lmdb"] }
