--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -38,6 +38,7 @@ meilisearch-error = { path = "../meilisearch-error", version = "0.14.0" }
 meilisearch-schema = { path = "../meilisearch-schema", version = "0.14.0" }
 meilisearch-tokenizer = {path = "../meilisearch-tokenizer", version = "0.14.0"}
 mime = "0.3.16"
+raft = { git = "https://github.com/MarinPostma/raft-frp.git" }
 rand = "0.7.3"
 regex = "1.3.6"
 rustls = "0.16.0"
