--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -58,6 +58,7 @@ tempfile = "3.1.0"
 tokio = { version = "0.2.18", features = ["macros"] }
 tonic = "0.3.0"
 ureq = { version = "0.12.0", features = ["tls"], default-features = false }
+uuid = { version = "0.8", features = ["v4"] }
 walkdir = "2.3.1"
 whoami = "0.8.1"
 
