--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,12 @@ heed = { version = "0.8.1", default-features = false, features = ["lmdb"] }
 jemallocator = "0.3.2"
 levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
 memmap = "0.7.0"
+near-proximity = { git = "https://github.com/Kerollmops/plane-sweep-proximity", rev = "6608205" }
 once_cell = "1.4.0"
 oxidized-mtbl = { git = "https://github.com/Kerollmops/oxidized-mtbl.git", rev = "5426182" }
-near-proximity = { git = "https://github.com/Kerollmops/plane-sweep-proximity", rev = "6608205" }
 rayon = "1.3.1"
 ringtail = "0.3.0"
-roaring = { git = "https://github.com/Kerollmops/roaring-rs.git", branch = "mem-usage" }
+roaring = "0.6.0"
 slice-group-by = "0.2.6"
 smallstr = "0.2.0"
 smallvec = "1.4.0"
