--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -29,14 +29,19 @@ bincode = "1.3.1"
 bytes = "0.5.4"
 chrono = { version = "0.4.11", features = ["serde"] }
 crossbeam-channel = "0.4.2"
+dashmap = "3.11.10"
 env_logger = "0.7.1"
 flate2 = "1.0.16"
 futures = "0.3.4"
+futures-core = "0.3.5"
+futures-util = "0.3.5"
 heed = "0.8.0"
 http = "0.1.19"
 indexmap = { version = "1.3.2", features = ["serde-1"] }
+libmdns = "0.4.1"
 log = "0.4.8"
 main_error = "0.1.0"
+mdns = "1.1.0"
 meilisearch-core = { path = "../meilisearch-core", version = "0.14.0" }
 meilisearch-error = { path = "../meilisearch-error", version = "0.14.0" }
 meilisearch-schema = { path = "../meilisearch-schema", version = "0.14.0" }
@@ -62,6 +67,7 @@ ureq = { version = "0.12.0", features = ["tls"], default-features = false }
 uuid = { version = "0.8", features = ["v4"] }
 walkdir = "2.3.1"
 whoami = "0.8.1"
+reqwest = "0.10.8"
 
 [dependencies.sentry]
 version = "0.18.1"
