stable cluster, svc discovery shutdown

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,14 @@
 user  nginx;
 
 events {
-    worker_connections   1000;
+	worker_connections   1000;
 }
 http {
-        server {
-              listen 7700;
-              location / {
-                proxy_pass http://raft:7700;
-              }
-        }
+	server {
+		client_max_body_size 100M;
+		listen 7700;
+		location / {
+			proxy_pass http://raft:7700;
+		}
+	}
 }
