--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,20 @@ version: "3"
 services:
   raft:
     image: marinpostma/meilisearch
-    command: ./meilisearch --http-addr 0.0.0.0:7700 --raft-config /raft-config.toml
+    command: /opt/meilisearch --http-addr 0.0.0.0:7700 --raft-config /raft-config.toml
     expose:
       - "7700"
     volumes:
       - shared_drive:/usr/share/shared
-  #metrics:
-    #image: marinpostma/raft-metrics
-    #hostname: "metrics"
-    #logging:
-     #driver: none
-    #depends_on:
-      #- raft
-    #ports:
-      #- "8080:8080"
+  metrics:
+    image: marinpostma/raft-metrics:latest
+    hostname: "metrics"
+    logging:
+     driver: none
+    depends_on:
+      - raft
+    ports:
+      - "8080:8080"
   nginx:
     image: nginx:latest
     volumes:
