--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ smallvec = "1.4.0"
 structopt = { version = "0.3.14", default-features = false }
 tempfile = "3.1.0"
 
+# documents words self-join
+itertools = "0.9.0"
+
 # logging
 log = "0.4.11"
 stderrlog = "0.4.3"
