--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ default-run = "indexer"
 
 [dependencies]
 anyhow = "1.0.28"
-arc-cache = { git = "https://github.com/Kerollmops/rust-arc-cache.git", rev = "56530f2" }
 bstr = "0.2.13"
 byteorder = "1.3.4"
 csv = "1.1.3"
@@ -17,6 +16,7 @@ fxhash = "0.2.1"
 heed = { version = "0.8.1", default-features = false, features = ["lmdb"] }
 jemallocator = "0.3.2"
 levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
+linked-hash-map = "0.5.3"
 memmap = "0.7.0"
 near-proximity = { git = "https://github.com/Kerollmops/plane-sweep-proximity", rev = "6608205" }
 once_cell = "1.4.0"
