change mdns library

--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -17,16 +17,17 @@ path = "src/main.rs"
 default = ["sentry"]
 
 [dependencies]
-actix-cors = "0.2.0"
+actix-cors = "0.2"
 actix-http = "1"
 actix-rt = "1"
 actix-service = "1.0.5"
-actix-web = { version = "2.0.0", features = ["rustls"] }
-actix-web-macros = "0.1.0"
+actix-web = { version = "2", features = ["rustls"] }
+actix-web-macros = "0.1"
+async-stream = "0.3"
 anyhow = "1.0"
 async-raft = "0.5.0"
 bincode = "1.3.1"
-bytes = "0.5.4"
+bytes = "0.5"
 chrono = { version = "0.4.11", features = ["serde"] }
 crossbeam-channel = "0.4.2"
 dashmap = "3.11.10"
@@ -38,10 +39,9 @@ futures-util = "0.3.5"
 heed = "0.8.0"
 http = "0.1.19"
 indexmap = { version = "1.3.2", features = ["serde-1"] }
-libmdns = "0.4.1"
+madness = { path = "../../tokio-mdns" }
 log = "0.4.8"
 main_error = "0.1.0"
-mdns = "1.1.0"
 meilisearch-core = { path = "../meilisearch-core", version = "0.14.0" }
 meilisearch-error = { path = "../meilisearch-error", version = "0.14.0" }
 meilisearch-schema = { path = "../meilisearch-schema", version = "0.14.0" }
@@ -50,6 +50,7 @@ mime = "0.3.16"
 prost = "0.6"
 rand = "0.7.3"
 regex = "1.3.6"
+reqwest = "0.10.8"
 rustls = "0.16.0"
 serde = { version = "1.0.105", features = ["derive"] }
 serde_json = { version = "1.0.50", features = ["preserve_order"] }
@@ -63,14 +64,14 @@ tempfile = "3.1.0"
 tokio = { version = "0.2.18", features = ["macros"] }
 toml = "0.5"
 tonic = "0.3.0"
+tracing = "0.1"
+tracing-futures = "0.2"
+tracing-subscriber = "0.2"
 ureq = { version = "0.12.0", features = ["tls"], default-features = false }
 uuid = { version = "0.8", features = ["v4"] }
 walkdir = "2.3.1"
 whoami = "0.8.1"
-reqwest = "0.10.8"
-tracing = "0.1"
-tracing-subscriber = "0.2"
-tracing-futures = "0.2"
+get_if_addrs = "0.5.3"
 
 [dependencies.sentry]
 version = "0.18.1"
