--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ bstr = "0.2.13"
 byteorder = "1.3.4"
 csv = "1.1.3"
 flate2 = "1.0.17"
-fst = "0.4.3"
+fst = "0.4.4"
 fxhash = "0.2.1"
 heed = { version = "0.8.1", default-features = false, features = ["lmdb"] }
 human_format = "1.0.3"
@@ -47,6 +47,9 @@ warp = "0.2.2"
 
 [dev-dependencies]
 criterion = "0.3"
+
+[build-dependencies]
+fst = "0.4.4"
 
 [features]
 default = []
