--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -23,9 +23,10 @@ actix-rt = "1"
 actix-service = "1.0.5"
 actix-web = { version = "2.0", features = ["rustls"] }
 actix-web-macros = "0.1"
-async-stream = "0.3"
 anyhow = "1.0"
+arc-swap = "0.4.7"
 async-raft = "0.5"
+async-stream = "0.3"
 bincode = "1.3.1"
 bytes = "0.5"
 chrono = { version = "0.4.11", features = ["serde"] }
@@ -35,11 +36,12 @@ flate2 = "1.0.16"
 futures = "0.3.4"
 futures-core = "0.3.5"
 futures-util = "0.3.5"
+get_if_addrs = "0.5.3"
 heed = "0.8.0"
 http = "0.1.19"
 indexmap = { version = "1.3.2", features = ["serde-1"] }
-madness = { git = "https://github.com/MarinPostma/madness.git", branch = "master" }
 log = "0.4.8"
+madness = { git = "https://github.com/MarinPostma/madness.git", branch = "master" }
 main_error = "0.1.0"
 meilisearch-core = { path = "../meilisearch-core", version = "0.14.0" }
 meilisearch-error = { path = "../meilisearch-error", version = "0.14.0" }
@@ -70,7 +72,6 @@ ureq = { version = "0.12.0", features = ["tls"], default-features = false }
 uuid = { version = "0.8", features = ["v4"] }
 walkdir = "2.3.1"
 whoami = "0.8.1"
-get_if_addrs = "0.5.3"
 
 [dependencies.sentry]
 version = "0.18.1"
