--- a/raft-config.toml
+++ b/raft-config.toml
@@ -1,7 +1,6 @@
 addr = "0.0.0.0:8000"
-shared_folder = "/usr/share/shared"
-snapshot_dir = "/usr/share/shared"
-log_db_path = "/usr/logs/"
+snapshot_dir = "/"
+log_db_path = "/"
 cluster_name = "ishmael"
 cluster_formation_timeout = 15
 discovery_interval = 5
