--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,15 +13,14 @@ csv = "1.1.3"
 flate2 = "1.0.17"
 fst = "0.4.4"
 fxhash = "0.2.1"
+grenad = { git = "https://github.com/Kerollmops/grenad.git", rev = "dee0815" }
 heed = { version = "0.8.1", default-features = false, features = ["lmdb"] }
 human_format = "1.0.3"
 jemallocator = "0.3.2"
 levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
 linked-hash-map = "0.5.3"
-memmap = "0.7.0"
 near-proximity = { git = "https://github.com/Kerollmops/plane-sweep-proximity", rev = "6608205" }
 once_cell = "1.4.0"
-oxidized-mtbl = { git = "https://github.com/Kerollmops/oxidized-mtbl.git", rev = "9ff8082" }
 rayon = "1.3.1"
 ringtail = "0.3.0"
 roaring = "0.6.1"
@@ -36,7 +35,7 @@ itertools = "0.9.0"
 
 # logging
 log = "0.4.11"
-stderrlog = "0.4.3"
+stderrlog = "0.5.0"
 
 # http server
 askama = "0.10.1"
@@ -46,13 +45,14 @@ tokio = { version = "0.2.15", features = ["full"] }
 warp = "0.2.2"
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = "0.3.3"
 
 [build-dependencies]
 fst = "0.4.4"
 
 [features]
 default = []
+file-fuse = ["grenad/file-fuse"]
 
 [[bench]]
 name = "search"
