--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -51,6 +51,9 @@ structopt = "0.3.12"
 tar = "0.4.29"
 tempfile = "3.1.0"
 tokio = { version = "0.2.18", features = ["macros"] }
+futures-core = { version = "0.3.6", default-features = false }
+futures-util = { version = "0.3.6", default-features = false }
+tokio-util = "0.3.1"
 ureq = { version = "0.12.0", features = ["tls"], default-features = false }
 walkdir = "2.3.1"
 whoami = "0.8.1"
