--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -22,7 +22,6 @@ actix-http = "2"
 actix-rt = "1"
 actix-service = "1.0.6"
 actix-web = { version = "3", features = ["rustls"] }
-async-stream = "0.3.0"
 bytes = "0.5.4"
 chrono = { version = "0.4.11", features = ["serde"] }
 crossbeam-channel = "0.4.2"
@@ -39,6 +38,7 @@ meilisearch-schema = { path = "../meilisearch-schema", version = "0.15.0" }
 meilisearch-tokenizer = {path = "../meilisearch-tokenizer", version = "0.15.0"}
 mime = "0.3.16"
 once_cell = "1.4.1"
+pin-utils = "0.1"
 rand = "0.7.3"
 regex = "1.3.6"
 rustls = "0.18"
