--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -19,6 +19,7 @@ default = ["sentry"]
 [dependencies]
 actix-cors = "0.3"
 actix-http = "2"
+actix-multipart = "0.3.0"
 actix-rt = "1"
 actix-service = "1.0.6"
 actix-web = { version = "3", features = ["rustls"] }
@@ -42,6 +43,7 @@ pin-utils = "0.1"
 rand = "0.7.3"
 regex = "1.3.6"
 rustls = "0.18"
+sanitize-filename = "0.2.1"
 serde = { version = "1.0.105", features = ["derive"] }
 serde_json = { version = "1.0.50", features = ["preserve_order"] }
 serde_qs = "0.5.2"
