--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ once_cell = "1.4.0"
 rayon = "1.3.1"
 ringtail = "0.3.0"
 roaring = "0.6.1"
+serde_json = "1.0.59"
 slice-group-by = "0.2.6"
 smallstr = "0.2.0"
 smallvec = "1.4.0"
