--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ default-run = "indexer"
 anyhow = "1.0.28"
 bstr = "0.2.13"
 byteorder = "1.3.4"
+crossbeam-channel = "0.5.0"
 csv = "1.1.3"
 flate2 = "1.0.17"
 fst = "0.4.4"
