--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.28"
+async-channel = "1.5.1"
 bstr = "0.2.13"
 byteorder = "1.3.4"
 crossbeam-channel = "0.5.0"
@@ -19,6 +20,7 @@ human_format = "1.0.3"
 jemallocator = "0.3.2"
 levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
 linked-hash-map = "0.5.3"
+memmap = "0.7.0"
 near-proximity = { git = "https://github.com/Kerollmops/plane-sweep-proximity", rev = "6608205" }
 once_cell = "1.4.0"
 rayon = "1.3.1"
@@ -41,8 +43,10 @@ stderrlog = "0.5.0"
 # http server
 askama = "0.10.1"
 askama_warp = "0.10.0"
+bytes = "0.5.6"
+futures = "0.3.6"
 serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "0.3.0", features = ["full"] }
+tokio = { version = "0.2", features = ["full"] }
 warp = "0.2.2"
 
 [dev-dependencies]
