--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
 linked-hash-map = "0.5.3"
 memmap = "0.7.0"
 near-proximity = { git = "https://github.com/Kerollmops/plane-sweep-proximity", rev = "6608205" }
+obkv = "0.1.0"
 once_cell = "1.4.0"
 rayon = "1.3.1"
 ringtail = "0.3.0"
