--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ smallstr =  { version = "0.2.0", features = ["serde"] }
 smallvec = "1.4.0"
 structopt = { version = "0.3.14", default-features = false, features = ["wrap_help"] }
 tempfile = "3.1.0"
+uuid = { version = "0.8.1", features = ["v4"] }
 
 # documents words self-join
 itertools = "0.9.0"
