--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ csv = "1.1.3"
 flate2 = "1.0.17"
 fst = "0.4.4"
 fxhash = "0.2.1"
-grenad = { git = "https://github.com/Kerollmops/grenad.git", rev = "ce3517f" }
+grenad = { git = "https://github.com/Kerollmops/grenad.git", rev = "3eb7ad9" }
 heed = { version = "0.10.0", default-features = false, features = ["lmdb"] }
 human_format = "1.0.3"
 indexmap = { version = "1.6.0", features = ["serde-1"] }
@@ -27,7 +27,7 @@ once_cell = "1.4.0"
 rayon = "1.3.1"
 ringtail = "0.3.0"
 roaring = "0.6.1"
-serde_json = "1.0.59"
+serde_json = { version = "1.0.59", features = ["preserve_order"] }
 slice-group-by = "0.2.6"
 smallstr =  { version = "0.2.0", features = ["serde"] }
 smallvec = "1.4.0"
