Move the http server into its own sub-module

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
+# the milli project is a library
 /target
+/Cargo.lock
+
+# the sub target folder
+http-ui/target
+
+# datasets
 *.csv
 *.mmdb
 *.svg
