--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ memmap = "0.7.0"
 near-proximity = { git = "https://github.com/Kerollmops/plane-sweep-proximity", rev = "6608205" }
 obkv = "0.1.0"
 once_cell = "1.4.0"
+ordered-float = "2.0.0"
 rayon = "1.3.1"
 ringtail = "0.3.0"
 roaring = "0.6.1"
@@ -44,6 +45,7 @@ stderrlog = "0.5.0"
 
 [dev-dependencies]
 criterion = "0.3.3"
+maplit = "1.0.2"
 
 [build-dependencies]
 fst = "0.4.4"
