--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
 linked-hash-map = "0.5.3"
 memmap = "0.7.0"
 near-proximity = { git = "https://github.com/Kerollmops/plane-sweep-proximity", rev = "6608205" }
+num-traits = "0.2.14"
 obkv = "0.1.0"
 once_cell = "1.4.0"
 ordered-float = "2.0.0"
