--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bstr = "0.2.13"
 byteorder = "1.3.4"
 crossbeam-channel = "0.5.0"
 csv = "1.1.3"
+either = "1.6.1"
 flate2 = "1.0.17"
 fst = "0.4.4"
 fxhash = "0.2.1"
