--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ flate2 = "1.0.17"
 fst = "0.4.4"
 fxhash = "0.2.1"
 grenad = { git = "https://github.com/Kerollmops/grenad.git", rev = "3eb7ad9" }
-heed = { version = "0.10.4", default-features = false, features = ["lmdb", "sync-read-txn"] }
+heed = { version = "0.10.5", default-features = false, features = ["lmdb", "sync-read-txn"] }
 human_format = "1.0.3"
 jemallocator = "0.3.2"
 levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
@@ -26,6 +26,7 @@ obkv = "0.1.0"
 once_cell = "1.4.0"
 ordered-float = "2.0.0"
 rayon = "1.3.1"
+regex = "1.4.2"
 ringtail = "0.3.0"
 roaring = "0.6.1"
 serde = { version = "1.0", features = ["derive"] }
