--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -25,8 +25,8 @@ actix-web = { version = "3", features = ["rustls"] }
 bytes = "0.5.4"
 anyhow = "1.0"
 arc-swap = "0.4.7"
-#async-raft = "0.5"
-async-raft = { path = "../../async-raft/async-raft" }
+async-raft = "0.6.0-alpha.1"
+#async-raft = { path = "../../async-raft/async-raft" }
 async-stream = "0.3"
 bincode = "1.3.1"
 chrono = { version = "0.4.11", features = ["serde"] }
