--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.28"
 bstr = "0.2.13"
+byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
 byteorder = "1.3.4"
 crossbeam-channel = "0.5.0"
 csv = "1.1.3"
