--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,16 @@
 [package]
-name = "meilisearch-http"
+authors = ["Quentin de Quelen <quentin@dequelen.me>", "Clément Renault <clement@meilisearch.com>"]
 description = "MeiliSearch HTTP server"
-version = "0.17.0"
-license = "MIT"
-authors = [
-    "Quentin de Quelen <quentin@dequelen.me>",
-    "Clément Renault <clement@meilisearch.com>",
-]
 edition = "2018"
-
+license = "MIT"
+name = "meilisearch-http"
+version = "0.17.0"
 [[bin]]
 name = "meilisearch"
 path = "src/main.rs"
 
-[features]
-default = ["sentry"]
+[build-dependencies]
+vergen = "3.1.0"
 
 [dependencies]
 actix-cors = "0.5.3"
@@ -22,6 +18,7 @@ actix-http = "2"
 actix-rt = "1"
 actix-service = "1.0.6"
 actix-web = { version = "3.3.2", features = ["rustls"] }
+byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
 bytes = "0.6.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 crossbeam-channel = "0.5.0"
@@ -29,19 +26,16 @@ env_logger = "0.8.2"
 flate2 = "1.0.18"
 futures = "0.3.7"
 http = "0.2.1"
-indexmap = { version = "1.3.2", features = ["serde-1"] }
+indexmap =  { version = "1.3.2", features = ["serde-1"] }
 log = "0.4.8"
 main_error = "0.1.0"
-meilisearch-core = { path = "../meilisearch-core", version = "0.17.0" }
-meilisearch-error = { path = "../meilisearch-error", version = "0.17.0" }
-meilisearch-schema = { path = "../meilisearch-schema", version = "0.17.0" }
-meilisearch-tokenizer = {path = "../meilisearch-tokenizer", version = "0.17.0"}
+milli = { path = "../milli" }
 mime = "0.3.16"
 once_cell = "1.5.2"
 rand = "0.7.3"
 regex = "1.4.2"
 rustls = "0.18"
-serde = { version = "1.0.117", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.59", features = ["preserve_order"] }
 serde_qs = "0.8.1"
 sha2 = "0.9.1"
@@ -50,37 +44,27 @@ slice-group-by = "0.2.6"
 structopt = "0.3.20"
 tar = "0.4.29"
 tempfile = "3.1.0"
-tokio = { version = "0.2.18", features = ["macros"] }
-ureq = { version = "1.5.1", features = ["tls"], default-features = false }
+tokio = "*"
+ureq = { version = "1.5.1", default-features = false, features = ["tls"] }
 walkdir = "2.3.1"
 whoami = "1.0.0"
+meilisearch-error = { path = "../MeiliSearch/meilisearch-error" }
 
 [dependencies.sentry]
-version = "0.18.1"
 default-features = false
-features = [
-    "with_client_implementation",
-    "with_panic",
-    "with_failure",
-    "with_device_info",
-    "with_rust_info",
-    "with_reqwest_transport",
-    "with_rustls",
-    "with_env_logger"
-]
+features = ["with_client_implementation", "with_panic", "with_failure", "with_device_info", "with_rust_info", "with_reqwest_transport", "with_rustls", "with_env_logger"]
 optional = true
+version = "0.18.1"
+
 
 [dev-dependencies]
 serde_url_params = "0.2.0"
 tempdir = "0.3.7"
+assert-json-diff = { branch = "master", git = "https://github.com/qdequele/assert-json-diff" }
 tokio = { version = "0.2.18", features = ["macros", "time"] }
 
-[dev-dependencies.assert-json-diff]
-git = "https://github.com/qdequele/assert-json-diff"
-branch = "master"
-
-[build-dependencies]
-vergen = "3.1.0"
+[features]
+default = ["sentry"]
 
 [target.'cfg(unix)'.dependencies]
 jemallocator = "0.3.2"
