--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,21 +18,26 @@ actix-http = "2"
 actix-rt = "1"
 actix-service = "1.0.6"
 actix-web = { version = "3.3.2", features = ["rustls"] }
+anyhow = "1.0.36"
 byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
 bytes = "0.6.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 crossbeam-channel = "0.5.0"
 env_logger = "0.8.2"
-flate2 = "1.0.18"
+flate2 = "1.0.19"
 futures = "0.3.7"
+grenad = { git = "https://github.com/Kerollmops/grenad.git", rev = "3adcb26" }
+heed = "0.10.6"
 http = "0.2.1"
 indexmap =  { version = "1.3.2", features = ["serde-1"] }
 log = "0.4.8"
 main_error = "0.1.0"
+meilisearch-error = { path = "../MeiliSearch/meilisearch-error" }
 milli = { path = "../milli" }
 mime = "0.3.16"
 once_cell = "1.5.2"
 rand = "0.7.3"
+rayon = "1.5.0"
 regex = "1.4.2"
 rustls = "0.18"
 serde = { version = "1.0", features = ["derive"] }
@@ -48,7 +53,6 @@ tokio = "*"
 ureq = { version = "1.5.1", default-features = false, features = ["tls"] }
 walkdir = "2.3.1"
 whoami = "1.0.0"
-meilisearch-error = { path = "../MeiliSearch/meilisearch-error" }
 
 [dependencies.sentry]
 default-features = false
