--- a/http-ui/Cargo.toml
+++ b/http-ui/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.28"
 byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
 grenad = { git = "https://github.com/Kerollmops/grenad.git", rev = "3adcb26" }
 heed = "0.10.5"
+meilisearch-tokenizer = { git = "https://github.com/meilisearch/Tokenizer.git", branch = "main" }
 memmap = "0.7.0"
 milli = { path = ".." }
 once_cell = "1.4.1"
