--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -53,6 +53,8 @@ tokio = { version = "0.2", features = ["macros"] }
 ureq = { version = "2.0.0", features = ["tls"], default-features = false }
 walkdir = "2.3.1"
 whoami = "1.0.3"
+byte-unit = "4.0.9"
+
 
 [dependencies.sentry]
 version = "0.18.1"
