--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ fst = "0.4.5"
 futures = "0.3.7"
 futures-util = "0.3.8"
 grenad = { git = "https://github.com/Kerollmops/grenad.git", rev = "3adcb26" }
-heed = { version = "0.10.6", default-features = false, features = ["lmdb", "sync-read-txn"] }
+heed = { version = "0.10.6", default-features = false, features = ["serde", "lmdb", "sync-read-txn"] }
 http = "0.2.1"
 indexmap =  { version = "1.3.2", features = ["serde-1"] }
 log = "0.4.8"
@@ -60,6 +60,7 @@ walkdir = "2.3.1"
 whoami = "1.0.0"
 dashmap = "4.0.2"
 page_size = "0.4.2"
+obkv = "0.1.1"
 
 [dependencies.sentry]
 default-features = false
