WIP: refactor IndexController
change the architecture of the index controller to allow it to own an
index store.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ whoami = "1.0.0"
 dashmap = "4.0.2"
 page_size = "0.4.2"
 obkv = "0.1.1"
+ouroboros = "0.8.0"
 
 [dependencies.sentry]
 default-features = false
