implement list all indexes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ page_size = "0.4.2"
 obkv = "0.1.1"
 ouroboros = "0.8.0"
 uuid = "0.8.2"
+itertools = "0.10.0"
 
 [dependencies.sentry]
 default-features = false
