--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ fst = "0.4.5"
 futures = "0.3.7"
 futures-util = "0.3.8"
 grenad = { git = "https://github.com/Kerollmops/grenad.git", rev = "3adcb26" }
-heed = { version = "0.10.6", default-features = false, features = ["serde", "lmdb", "sync-read-txn"] }
+heed = "0.10.6"
 http = "0.2.1"
 indexmap =  { version = "1.3.2", features = ["serde-1"] }
 log = "0.4.8"
@@ -55,8 +55,6 @@ tar = "0.4.29"
 tempfile = "3.1.0"
 tokio = { version = "0.2", features = ["full"] }
 dashmap = "4.0.2"
-page_size = "0.4.2"
-obkv = "0.1.1"
 uuid = "0.8.2"
 itertools = "0.10.0"
 
@@ -72,7 +70,6 @@ serde_url_params = "0.2.0"
 tempdir = "0.3.7"
 assert-json-diff = { branch = "master", git = "https://github.com/qdequele/assert-json-diff" }
 tokio = { version = "0.2", features = ["macros", "time"] }
-mockall = "0.9.0"
 
 [features]
 default = ["sentry"]
