--- a/http-ui/Cargo.toml
+++ b/http-ui/Cargo.toml
@@ -12,7 +12,7 @@ grenad = { git = "https://github.com/Kerollmops/grenad.git", rev = "3adcb26" }
 heed = "0.10.5"
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/Tokenizer.git", branch = "main" }
 memmap = "0.7.0"
-milli = { path = ".." }
+milli = { path = "../milli" }
 once_cell = "1.4.1"
 rayon = "1.5.0"
 structopt = { version = "0.3.14", default-features = false, features = ["wrap_help"] }
