--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ main_error = "0.1.0"
 meilisearch-error = { path = "../MeiliSearch/meilisearch-error" }
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/Tokenizer.git", branch = "main" }
 memmap = "0.7.0"
-milli = { path = "../milli" }
+milli = { path = "../milli/milli" }
 mime = "0.3.16"
 once_cell = "1.5.2"
 rand = "0.7.3"
@@ -57,6 +57,7 @@ tokio = { version = "0.2", features = ["full"] }
 dashmap = "4.0.2"
 uuid = "0.8.2"
 itertools = "0.10.0"
+either = "1.6.1"
 
 [dependencies.sentry]
 default-features = false
