--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ actix-http = "2"
 actix-rt = "1"
 actix-service = "1.0.6"
 actix-web = { version = "3.3.2", features = ["rustls"] }
-anyhow = "1.0.36"
+anyhow = "1.0.38"
 async-compression = { version = "0.3.6", features = ["gzip", "tokio-02"] }
 byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
 bytes = "0.6.0"
@@ -38,7 +38,7 @@ main_error = "0.1.0"
 meilisearch-error = { path = "../MeiliSearch/meilisearch-error" }
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/Tokenizer.git", branch = "main" }
 memmap = "0.7.0"
-milli = { path = "../milli/milli" }
+milli = { git = "https://github.com/meilisearch/milli.git", rev = "8dcb3e0" }
 mime = "0.3.16"
 once_cell = "1.5.2"
 rand = "0.7.3"
