create workspace with meilisearch-error

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-# the milli project is a library
 /target
+meilisearch-core/target
+**/*.csv
+**/*.json_lines
+**/*.rs.bk
+/*.mdb
+/query-history.txt
+/data.ms
