--- a/.github/workflows/create_artifacts.yml
+++ b/.github/workflows/create_artifacts.yml
@@ -14,14 +14,14 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: ubuntu-latest
-            artifact_name: test-ci
-            asset_name: meilisearch-linux-amd64
+            artifact_name: meilisearch-alpha
+            asset_name: meilisearch-alpha-linux-amd64
           - os: macos-latest
-            artifact_name: test-ci
-            asset_name: meilisearch-macos-amd64
+            artifact_name: meilisearch-alpha
+            asset_name: meilisearch-alpha-macos-amd64
           - os: windows-latest
-            artifact_name: test-ci.exe
-            asset_name: meilisearch-windows-amd64.exe
+            artifact_name: meilisearch-alpha.exe
+            asset_name: meilisearch-alpha-windows-amd64.exe
     steps:
       - uses: hecrj/setup-rust-action@master
         with:
