--- a/milli/Cargo.toml
+++ b/milli/Cargo.toml
@@ -45,6 +45,7 @@ itertools = "0.10.0"
 
 # logging
 log = "0.4.14"
+logging_timer = "1.0.0"
 
 # We temporarily depend on this crate just to fix this issue
 # https://github.com/bheisler/TinyTemplate/pull/17
