--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -3,8 +3,7 @@ name: Release Drafter
 on:
   push:
     branches:
-      # - main
-      - release-drafter
+      - main
 
 jobs:
   update_release_draft:
@@ -12,6 +11,6 @@ jobs:
     steps:
       - uses: release-drafter/release-drafter@v5
         with:
-          config-name: release-draft-template.yml
+          config-name: release-draft-template-ll.yml
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_DRAFTER_TOKEN }}
