--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["Quentin de Quelen <quentin@dequelen.me>", "Clément Renault <clement
 description = "MeiliSearch HTTP server"
 edition = "2018"
 license = "MIT"
-name = "meilisearch"
+name = "meilisearch-http"
 version = "0.17.0"
 [[bin]]
 name = "meilisearch"
@@ -14,9 +14,9 @@ vergen = "3.1.0"
 
 [dependencies]
 actix-cors = { path = "../actix-extras/actix-cors" }
-#actix-http = "2"
-actix-service = "1.0.6"
-actix-web = { version = "4.0.0-beta.3", features = ["rustls"] }
+actix-http = { version = "3.0.0-beta.4", features = ["cookies"] }
+actix-service = "2.0.0-beta.4"
+actix-web = { version = "4.0.0-beta.4", features = ["rustls", "cookies"] }
 #actix-web = { version = "3", features = ["rustls"] }
 anyhow = "1.0.36"
 async-compression = { version = "0.3.6", features = ["gzip", "tokio-02"] }
@@ -73,7 +73,7 @@ version = "0.18.1"
 serde_url_params = "0.2.0"
 tempdir = "0.3.7"
 assert-json-diff = { branch = "master", git = "https://github.com/qdequele/assert-json-diff" }
-tokio = { version = "0.2", features = ["macros", "time"] }
+actix-rt = "2.1.0"
 
 [features]
 default = ["sentry"]
