--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -74,6 +74,7 @@ serde_url_params = "0.2.0"
 tempdir = "0.3.7"
 assert-json-diff = { branch = "master", git = "https://github.com/qdequele/assert-json-diff" }
 actix-rt = "2.1.0"
+urlencoding = "1.1.1"
 
 [features]
 default = ["sentry"]
