--- a/milli/Cargo.toml
+++ b/milli/Cargo.toml
@@ -52,6 +52,7 @@ logging_timer = "1.0.0"
 tinytemplate = "=1.1.0"
 
 [dev-dependencies]
+big_s = "1.0.2"
 criterion = "0.3.4"
 maplit = "1.0.2"
 rand = "0.8.3"
