--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -38,7 +38,8 @@ main_error = "0.1.0"
 meilisearch-error = { path = "../meilisearch-error" }
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/Tokenizer.git", branch = "main" }
 memmap = "0.7.0"
-milli = { git = "https://github.com/meilisearch/milli.git", rev = "794fce7" }
+milli = { path = "../../milli/milli" }
+#milli = { git = "https://github.com/meilisearch/milli.git", rev = "794fce7" }
 mime = "0.3.16"
 once_cell = "1.5.2"
 rand = "0.7.3"
