--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -62,6 +62,7 @@ either = "1.6.1"
 async-trait = "0.1.42"
 thiserror = "1.0.24"
 async-stream = "0.3.0"
+parking_lot = "0.11.1"
 
 [dependencies.sentry]
 default-features = false
