--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -17,7 +17,6 @@ actix-cors = { path = "../../actix-extras/actix-cors" }
 actix-http = { version = "3.0.0-beta.4", features = ["cookies"] }
 actix-service = "2.0.0-beta.4"
 actix-web = { version = "4.0.0-beta.4", features = ["rustls", "cookies"] }
-#actix-web = { version = "3", features = ["rustls"] }
 anyhow = "1.0.36"
 async-compression = { version = "0.3.6", features = ["gzip", "tokio-02"] }
 byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
@@ -38,8 +37,7 @@ main_error = "0.1.0"
 meilisearch-error = { path = "../meilisearch-error" }
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/Tokenizer.git", branch = "main" }
 memmap = "0.7.0"
-milli = { path = "../../milli/milli" }
-#milli = { git = "https://github.com/meilisearch/milli.git", rev = "794fce7" }
+milli = { git = "https://github.com/meilisearch/milli.git", rev = "b7b23cd" }
 mime = "0.3.16"
 once_cell = "1.5.2"
 rand = "0.7.3"
