--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/main.rs"
 vergen = "3.1.0"
 
 [dependencies]
-actix-cors = { path = "../../actix-extras/actix-cors" }
+actix-cors = { git = "https://github.com/MarinPostma/actix-extras.git", rev = "8f7b1fd" }
 actix-http = { version = "3.0.0-beta.4", features = ["cookies"] }
 actix-service = "2.0.0-beta.4"
 actix-web = { version = "4.0.0-beta.4", features = ["rustls", "cookies"] }
