--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -4,7 +4,7 @@ description = "MeiliSearch HTTP server"
 edition = "2018"
 license = "MIT"
 name = "meilisearch-http"
-version = "0.17.0"
+version = "0.21.0-alpha"
 [[bin]]
 name = "meilisearch"
 path = "src/main.rs"
