update CI & Dockerfile

--- a/.github/workflows/create_artifacts.yml
+++ b/.github/workflows/create_artifacts.yml
@@ -28,7 +28,7 @@ jobs:
           rust-version: stable
       - uses: actions/checkout@v1
       - name: Build
-        run: cargo build --release --locked
+        run: cargo build --release --locked --features mini-dashboard
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v1-release
         with:
