--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 /target
-meilisearch-core/target
 **/*.csv
 **/*.json_lines
 **/*.rs.bk
 /*.mdb
 /query-history.txt
 /data.ms
+/meilisearch-http/mini-dashboard
+/meilisearch-http/.mini-dashboard.sha1
