Add --locked in CI tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --all
+          args: --all --locked
 
       - uses: actions-rs/cargo@v1
         with:
